<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_slogan">Water Quality System</string>
    <string name="compost">Compost</string>
    <string name="soil">Soil</string>
    <string name="water">Water</string>
    <string name="copyright">Copyright © ffem</string>
    <string name="legal_info">Legal Information</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="testing">Testing</string>
    <string name="align_color_card">Align the color card within the view above</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="camera">Camera</string>
    <string name="delete">Delete</string>
    <string name="delete_selected_result">Delete selected result?</string>
    <string name="deleted">Deleted</string>

...
    <string name="too_close">Too close</string>
    <string name="confirm_calibration">Confirm Calibration</string>
    <string name="confirm">Confirm</string>
    <string name="select_calibration_point">Select calibration point</string>
    <string name="select_standard_measured">Select the value of the standard measured</string>
    <string name="color_shift">Color shift</string>
    <string name="skip">Skip</string>

    <!-- ErrorType -->
    <string name="no_error" tools:keep="@string/no_error">Error</string>
    <string name="no_match" tools:keep="@string/no_match">No match</string>
    <string name="calibration_error" tools:keep="@string/calibration_error">Calibration error</string>
    <string name="bad_lighting" tools:keep="@string/bad_lighting">Bad lighting</string>
...
    <string name="update_download_fail">Unable to download update</string>
    <string name="restart">Restart</string>
    <string name="retry">Retry</string>

    <string name="ammonia" tools:keep="@string/ammonia">Ammonia</string>
    <string name="dissolved_oxygen" tools:keep="@string/dissolved_oxygen">Dissolved Oxygen</string>
    <string name="fluoride" tools:keep="@string/fluoride">Fluoride</string>
    <string name="fluoride_high_range" tools:keep="@string/fluoride_high_range">Fluoride - High Range</string>
    <string name="iron" tools:keep="@string/iron">Iron</string>
    <string name="nitrate" tools:keep="@string/nitrate">Nitrate</string>
    <string name="nitrite" tools:keep="@string/nitrite">Nitrite</string>
    <string name="nitrogen" tools:keep="@string/nitrogen">Nitrogen</string>
    <string name="organic_carbon" tools:keep="@string/organic_carbon">Organic Carbon</string>
...
    <string name="error_test_not_available">Requested test is not available</string>
    <string name="please_contact_support">Please contact technical support</string>
    <string name="cannot_start_test">Cannot start test</string>
    <string name="error">Error</string>
    <string name="required">Required</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="calibrate">Calibrate</string>
    <string name="select_test">Select Test</string>
    <string name="calibrate_summary">Calibrate using a standard</string>
    <string name="calibrated_successfully">%s calibrated successfully</string>
    <string name="tilt_backwards">Tilt phone backwards</string>
    <string name="tilt_forwards">Tilt phone forwards</string>
    <string name="tilt_left_forwards">Tilt phone left side forwards</string>
...
    <string name="gps_instructions">Stand near the water source but away from objects that could block the GPS signals</string>
    <string name="location_permission">Location permission is required</string>
    <string name="accuracy">Accuracy</string>
    <string name="getting_location">Getting location</string>
    <string name="accept_location">Accept</string>
    <string name="lat_lon">Lat/Lon</string>
    <string name="save">Save</string>
    <string name="required_error">This is required</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="info">Info</string>
    <string name="manual_photo_capture">Manual photo capture</string>
    <string name="manual_photo_summary">Turn this on if the auto photo capture is not working well on this phone</string>
    <string name="airplane_mode_off">Please turn off airplane mode</string>
...
